added transactions period to swagger
