# controllers/transactions/getTransactionsByDate.js
@@ -23,21 +23,7 @@ const getTransactionsByDate = async (req, res) => {
   const { _id } = req.user
   const { year, month } = req.body
 
-  // console.log('year:', year)
-  // console.log('month:', month)
   const allTransactions = await getTransactions(_id)
-  // console.log(allTransactions)
-  // // якщо массив порожній
-  // if (allTransactions.length === 0) {
-  //   res.status(200).json({
-  //     Status: '200 OK',
-  //     'Content-Type': 'application/json',
-  //     ResponseBody: {
-  //       message: 'You have no transactions yet',
-  //     },
-  //   })
-  //   return
-  // }
 
   const getTransactionsByDates = (year, month) => {
     let filteredTransactions
@@ -57,11 +43,6 @@ const getTransactionsByDate = async (req, res) => {
   }
 
   const filteredTransactions = getTransactionsByDates(year, month)
-  // const filteredTransactions = allTransactions.filter(
-  //   (transaction) =>
-  //     new Date(transaction.date).getFullYear() === year &&
-  //     new Date(transaction.date).getMonth() === month - 1
-  // )
 
   res.status(200).json({
     Status: '200 OK',
